fixed overflow issue

--- a/js/Main.css
+++ b/js/Main.css
@@ -7,5 +7,4 @@
     border-radius: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-    overflow: hidden;
 }
